--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,3 +307,20 @@ select{
   }
 }  
 
+/**** Ajax loader image ****/
+
+.ajax-loader {
+  /*visibility: hidden;*/
+  display: none;
+  background-color: rgba(255,255,255,0.7);
+  position: absolute;
+  z-index: +100 !important;
+  width: 100%;
+  height:100%;
+}
+
+.ajax-loader img {
+  position: relative;
+  top:50%;
+  left:50%;
+}
